# dcm_framework

./: .gitignore  README.md  pyproject.toml
src/dcm_framework/: __init__.py  __main__.py
src/dcm_framework/_vendor/protocol_engine/: __init__.py  __main__.py  mixins.py
src/dcm_framework/lib/: protocol.py  util.py  visualization.py
src/dcm_framework/lib/entities/layout/: __init__.py
src/dcm_framework/lib/entities/protocol/: __init__.py
src/dcm_framework/lib/transformers/: assets.py  prompt.py  protocol.py
src/dcm_framework/templates/: PtychogramNavigator.jinja2  angles.scad.jinja2  emitter_footprint.scad  emitters.scad.jinja2  hemispehrical_illuminator_shell.scad  hemispherical_illuminator_shell.scad  illuminator_shell___base.scad  illuminator_shell___hemispherical.scad  illuminator_shell___planar.scad  manifest.scad.jinja2  planar_illuminator_shell.scad  positions.scad.jinja2  ring_transition_markers.scad  shell_support.scad
