[build-system]
requires = [
    "flit_core >=3.11,<4",
    "fire",
    "pandas",
    "jinja2",
    "numpy",
    "pint",
    "mpmath",
    "questionary"
]
build-backend = "flit_core.buildapi"

[project]
name = "dcm_framework"
authors = [{name = "Ilyá Kostolomov", email = "ilya@icgi.no"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "fire",
    "jinja2",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "questionary",
    "shapely",
    "pint",
    "mpmath",
    "openpyxl",
]

[project.optional-dependencies]
friendly-names = ["friendly_names"]

[project.scripts]
dcm_framework = "dcm_framework.__main__:main"

[project.urls]
Home = "https://github.com/icgi/dcm_framework"
